static/css/style.css
/* ... */
.content-wrapper {
	background-color:#fff;
	padding:80px 80px 100px;
	box-shadow: 0px 0px 15px 2px #aaa;
	-moz-box-sizing:border-box;
	box-sizing:border-box;
}
.full-width-content {
	margin: 0 -80px;
}
.content {
	position:relative;
}
a {
	color:#669900;
	font-weight:300;
}
a:hover {
	color:#558800;
	text-decoration:none;
}

header {
	position:fixed;
	top:0;
	left:0;
	width:100%;
	height:50px;
	box-shadow:0 1px 10px 0px #999;
	z-index:40;
	font-size:20px;
	font-family:'Lato';
	
background: -moz-linear-gradient(top,  rgba(153,204,0,0.97) 0%, rgba(187,224,68,0.97) 68%, rgba(187,224,68,0.97) 96%, rgba(166,206,51,0.97) 97%, rgba(102,153,0,1) 100%); /* FF3.6+ */
background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(153,204,0,0.97)), color-stop(68%,rgba(187,224,68,0.97)), color-stop(96%,rgba(187,224,68,0.97)), color-stop(97%,rgba(166,206,51,0.97)), color-stop(100%,rgba(102,153,0,1))); /* Chrome,Safari4+ */
background: -webkit-linear-gradient(top,  rgba(153,204,0,0.97) 0%,rgba(187,224,68,0.97) 68%,rgba(187,224,68,0.97) 96%,rgba(166,206,51,0.97) 97%,rgba(102,153,0,1) 100%); /* Chrome10+,Safari5.1+ */
background: -o-linear-gradient(top,  rgba(153,204,0,0.97) 0%,rgba(187,224,68,0.97) 68%,rgba(187,224,68,0.97) 96%,rgba(166,206,51,0.97) 97%,rgba(102,153,0,1) 100%); /* Opera 11.10+ */
background: -ms-linear-gradient(top,  rgba(153,204,0,0.97) 0%,rgba(187,224,68,0.97) 68%,rgba(187,224,68,0.97) 96%,rgba(166,206,51,0.97) 97%,rgba(102,153,0,1) 100%); /* IE10+ */
background: linear-gradient(to bottom,  rgba(153,204,0,0.97) 0%,rgba(187,224,68,0.97) 68%,rgba(187,224,68,0.97) 96%,rgba(166,206,51,0.97) 97%,rgba(102,153,0,1) 100%); /* W3C */
filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f799cc00', endColorstr='#669900',GradientType=0 ); /* IE6-9 */
	
}
.fancybox-margin header {
	padding-right: 15px;
	-moz-box-sizing:border-box;
	box-sizing: border-box;
}
header a {
	line-height:50px;
	color:#FFF;
	display:inline-block;
	padding:0 20px;
	border-left: 1px solid rgba(255,255,255,.5);
	border-right: 1px solid rgba(50,150,50,.25);
	text-shadow: 1px 1px 3px rgba(50,150,50,.4);
	float:left;
}
header a:hover {
background: -moz-linear-gradient(top,  rgba(255,255,255,0) 0%, rgba(255,255,255,0) 33%, rgba(255,255,255,0.4) 100%); /* FF3.6+ */
background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(255,255,255,0)), color-stop(33%,rgba(255,255,255,0)), color-stop(100%,rgba(255,255,255,0.4))); /* Chrome,Safari4+ */
background: -webkit-linear-gradient(top,  rgba(255,255,255,0) 0%,rgba(255,255,255,0) 33%,rgba(255,255,255,0.4) 100%); /* Chrome10+,Safari5.1+ */
background: -o-linear-gradient(top,  rgba(255,255,255,0) 0%,rgba(255,255,255,0) 33%,rgba(255,255,255,0.4) 100%); /* Opera 11.10+ */
background: -ms-linear-gradient(top,  rgba(255,255,255,0) 0%,rgba(255,255,255,0) 33%,rgba(255,255,255,0.4) 100%); /* IE10+ */
background: linear-gradient(to bottom,  rgba(255,255,255,0) 0%,rgba(255,255,255,0) 33%,rgba(255,255,255,0.4) 100%); /* W3C */
filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ffffff', endColorstr='#66ffffff',GradientType=0 ); /* IE6-9 */

	color:#fff;
	text-decoration:none;
}
header div.right {
	float:right;
	text-align:right;
	display:inline;
}

.form-content {
	padding-right: 150px;
	text-align:right;
}
.form-content > p {
	padding-bottom: 30px;
	width: 500px;
	margin-left: auto;
}
form {
	text-align:right;
	margin:10px 0;
	display: inline-block;
}
label {
	display:inline;
}

.reminder-text {
	font-size:16px;
	line-height:20px;
}

.simple-form-title {
	padding-top:20px;
	padding-bottom:10px;
}
.forgotpassword {
	margin-right:20px;
}

.top-main-buttons {
	position:absolute;
	top:0;
	right:0;
}
.top-main-buttons .btn {
	margin-left:20px;
}

.modal-form-wrapper {
	padding: 10px 30px 30px;
	width:600px;
	text-align:right;
}
.modal-form-wrapper h1 {
	text-align:left;
}
.modal-form-wrapper form {
	padding-right:30px;
}
label.error {
	color:#660000;
	font-size:18px;
	font-weight:700;
	display:block;
	cursor:default;
	width:auto;
	margin-right:0;
}
form h2.success_message {
	display:inline;
	margin-right:20px;
}
ul.errorlist {
	padding:0;
	margin:0;
	font-size:14px;
	color:#660000;
}
ul.errorlist li {
	padding:0;
	list-style: none;
}

.jPaginate {
	margin-top:30px;
	margin-left:200px;
}

.thumbnail-group {
	margin-right:-13px;
}
.thumbnail-container {
	display: inline-block;
	padding: 5px;
	border-radius: 5px;
	border: solid 1px #ccc;
	margin: 30px 13px 0 0;
	background-color: white;
	box-shadow: 0 0 5px #ccc;
	position:relative;
	width:188px;
	vertical-align: top;
}
.thumbnail-frame {
	border: solid 1px #ccc;
	height:170px;
	text-align:center;
	line-height:160px;
	position:relative;
	width:100%;
	-moz-box-sizing:border-box;
	box-sizing:border-box;
	cursor:pointer;
}
.thumbnail-frame .image-thumbnail {
	max-height:168px;
	max-width:100%;
	display:inline-block;
}
.story-thumbnail .thumbnail-frame .image-thumbnail {
	width:100%;
}
.image-tags {
	padding:0px 0px;
	text-align: center;
}
.image-tags a {
	color:#666;
	text-decoration:none;
}
.thumbnail-title {
	text-align: center;
	overflow: hidden;
	text-overflow: ellipsis;
	white-space: nowrap;
}
.tag-link {
	cursor:pointer;
	border:1px solid #ccc;
	border-radius:5px;
	padding:2px 5px;
	font-size:13px;
	display:inline;
	font-weight:700;
	color:#111;
	margin:0 5px 10px 0;
	white-space: nowrap;
}
.toggle-visible,
.toggle-favorite {
	position:absolute;
	top:0px;
	right:0px;
	width:40px;
	height:40px;
	line-height:40px;
	font-size:40px;
	border-radius:0 0 0 5px;
	background-color:#EEE;
	box-shadow: inset 3px 3px 5px rgba(255, 255, 255, .7), inset -3px -3px 5px rgba(100, 100, 100, .1);
	opacity:0;
	cursor:pointer;
}
.toggle-visible {
	right:auto;
	left:0;
	border-radius:0 0 5px 0;
}
.thumbnail-container:hover .toggle-visible,
.thumbnail-container:hover .toggle-favorite {
	opacity:.8;
}
.thumbnail-container .toggle-visible:hover,
.thumbnail-container .toggle-favorite:hover {
	opacity:1;
}
/* ... */

